--- a/static/email-templates/base.html
+++ b/static/email-templates/base.html
@@ -81,7 +81,7 @@
     <div class="wrap">
         <div class="header">
             {{ if ne LogoURL "" }}
-                <a href="{{ RootURL }}"><img src="{{ LogoURL }}" alt="listmonk" /></a>
+                <a href="{{ RootURL }}"><img src="{{ LogoURL }}" alt="eTV" /></a>
             {{ end }}
         </div>
 {{ end }}
@@ -90,7 +90,7 @@
     </div>
     
     <div class="footer">
-        <p>Powered by <a href="https://listmonk.app" target="_blank">listmonk</a></p>
+        <p>Subscription Management by <a href="https://aihr.global.lmco.com" target="_blank">eTV</a></p>
     </div>
     <div class="gutter">&nbsp;</div>
 </body>
